BOS-438: Add GitHub Actions workflow to create PR from dev to main

--- a/.github/workflows/create_pr_dev_to_main.yml
+++ b/.github/workflows/create_pr_dev_to_main.yml
@@ -2,6 +2,13 @@ name: Create merge PR to main
 run-name: "Raise merge PR to main from dev ${{ github.sha }}"
 
 on:
+  workflow_dispatch:
+    inputs:
+      dry_run:
+        description: "Preview only (no PR creation)"
+        required: false
+        type: boolean
+        default: true
   workflow_call:
     secrets:
       GH_PAT:
@@ -10,12 +17,16 @@ on:
 jobs:
   create_pr:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
 
     steps:
       - name: Check out code
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # needed to compare commit history
+          fetch-depth: 0
+          ref: dev  # ensure we’re comparing dev to main
 
       - name: Fetch main branch
         run: git fetch origin main
@@ -23,25 +34,36 @@ jobs:
       - name: Extract BOS ticket numbers from commits
         id: extract_tickets
         run: |
-          # Collect commit messages between main and dev
           COMMITS=$(git log origin/main..HEAD --pretty=format:"%s")
-
-          # Extract, normalize, dedupe, and join ticket numbers
           TICKETS=$(echo "$COMMITS" \
             | grep -oiE "bos[-_][0-9]+" \
             | tr '[:lower:]' '[:upper:]' \
             | sed 's/_/-/g' \
             | sort -u \
             | paste -sd "," -)
-          
-          # Fallback if none found
           if [ -z "$TICKETS" ]; then
-            TICKETS="no-ticket"
+            TICKETS=""
           fi
-
           echo "tickets=$TICKETS" >> $GITHUB_OUTPUT
 
+      - name: Preview PR title/body
+        run: |
+          if [ -n "${{ steps.extract_tickets.outputs.tickets }}" ]; then
+            TITLE="Merge dev to main (${{ steps.extract_tickets.outputs.tickets }})"
+            BODY="Triggered by a run. Includes tickets: ${{ steps.extract_tickets.outputs.tickets }}"
+          else
+            TITLE="Merge dev to main"
+            BODY="Triggered by a run. No BOS tickets detected."
+          fi
+          echo "::notice title=PR Title::$TITLE"
+          echo "::notice title=PR Body::$BODY"
+
+      - name: Install gh (GitHub CLI)
+        if: inputs.dry_run == false
+        uses: cli/gh-action-install@v3
+
       - name: Check if an open dev→main PR already exists
+        if: inputs.dry_run == false
         id: check_pr
         run: |
           OPEN_PRS=$(gh pr list --base main --head dev --json number --jq '.[].number')
@@ -54,10 +76,15 @@ jobs:
           GH_TOKEN: ${{ secrets.GH_PAT }}
 
       - name: Create PR if none exists
-        if: steps.check_pr.outputs.existing_pr == ''
+        if: inputs.dry_run == false && steps.check_pr.outputs.existing_pr == ''
         run: |
-          TITLE="Merge dev to main (${{ steps.extract_tickets.outputs.tickets }})"
-          BODY="Triggered by a merge in dev. Now merging dev into main. Includes tickets: ${{ steps.extract_tickets.outputs.tickets }}"
+          if [ -n "${{ steps.extract_tickets.outputs.tickets }}" ]; then
+            TITLE="Merge dev to main (${{ steps.extract_tickets.outputs.tickets }})"
+            BODY="Triggered by a run. Includes tickets: ${{ steps.extract_tickets.outputs.tickets }}"
+          else
+            TITLE="Merge dev to main"
+            BODY="Triggered by a run. No BOS tickets detected."
+          fi
           gh pr create --base main --head dev --title "$TITLE" --body "$BODY"
         env:
           GH_TOKEN: ${{ secrets.GH_PAT }}
